# app-backend

./: env.example  pyproject.toml
app/: api.py  crud.py  main.py  models.py  security.py  utilities.py
migrations/: env.py
migrations/versions/: 13838c5d2532_init.py  5b1d82419349_init.py  dc52390ea8e0_deleted_notes.py
